[gd_scene load_steps=4 format=3 uid="uid://ba2ld40oo5nby"]

[ext_resource type="Script" uid="uid://b2os62j4by2av" path="res://Scenes/Ui/StartNextWaveButtonUi/start_next_wave_button_ui.gd" id="1_fbts7"]
[ext_resource type="Theme" uid="uid://b4tk5wojck5al" path="res://Resources/Themes/Base/ui_button_theme.tres" id="1_jbhcr"]
[ext_resource type="Texture2D" uid="uid://rohjrhysxrdx" path="res://Assets/Aseprite/Ui/PlayButton1x.png" id="3_lijix"]

[node name="StartNextWaveButtonUi" type="Button"]
custom_minimum_size = Vector2(100, 0)
offset_right = 100.0
offset_bottom = 30.0
theme = ExtResource("1_jbhcr")
text = "
"
script = ExtResource("1_fbts7")

[node name="PlayIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -8.0
offset_right = -21.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lijix")

[node name="PlayLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -15.0
offset_right = 38.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
